examples/type_system/failing/197_effect_row_subtract_unresolved_multi_e420.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error, 1 note • examples/type_system/failing/197_effect_row_subtract_unresolved_multi_e420.flx
// error[E304]: Invalid Effect Row
//
// Cannot interpret this effect row: `e` and `t` are distinct row variables in the same row.
//
//   examples/type_system/failing/197_effect_row_subtract_unresolved_multi_e420.flx:28:41
//    |
// 28 | fn unresolved_many(x: Int) -> Int with |e - IO, |t - Time {
//    |                                         ^^^^^^
//    |                                         ------ conflicting row variables in this effect row
//
// Hint:
//   Use a single row variable per `with ...` clause (for example `|e` instead of `|e, |f`).
//
//
// Note: Downstream Errors Suppressed
//
// I hid 1 later-stage diagnostic (1 effect) because earlier errors make them less reliable. Fix the earlier errors first, or use `--all-errors` to see everything.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E304

// E420: unresolved multiple effect variables in subtraction paths.

fn unresolved_many(x: Int) -> Int with |e - IO, |t - Time {
    x
}

fn main() -> Unit {
    let _ = unresolved_many(1)
}
